--- a/code site/style/css/pagebase.css
+++ b/code site/style/css/pagebase.css
@@ -9,8 +9,8 @@ a{
 h1{
     text-align: center;
     font-size: 80px;
-    border-bottom-style: solid;
-    border-bottom-width: 5%;
+    margin-top: 3%;
+    margin-bottom: 5%;
     border-bottom-color: white;
 }
 /*css pour l'image de fons*/
@@ -48,7 +48,7 @@ body{
 .mainhead{
     z-index: 10;
     display: grid;
-    grid-template-rows: 25% 35% 1fr;
+    grid-template-rows: 30% 40% 1fr;
     border-style: solid;
     border-width: 1px;
     border-color: black;
