--- a/code site/style/css/csshistoiredeezer.css
+++ b/code site/style/css/csshistoiredeezer.css
@@ -4,8 +4,12 @@
     grid-template-columns: 45% 10% 45%;
 }
 
+h2{
+    margin-top: 2%;
+    margin-bottom: 5%;
+}
 
-progress {
+ progress {
     grid-row: 2;
     grid-column: 2;
 	-webkit-appearance: none;
@@ -33,7 +37,6 @@ progress::-webkit-progress-value {
 	border-top-right-radius: 5px;
 }
 
-
 .p1{
     grid-row: 2;
 }
@@ -56,7 +59,7 @@ progress::-webkit-progress-value {
     text-align: center;
     justify-self: center;
     color: white;
-    margin: 10%;
+    margin-top: 5%;
     height: fit-content;
     width: 50%;
     border-radius: 10px;
@@ -65,14 +68,14 @@ progress::-webkit-progress-value {
     position: relative;
 }
 
-
-.box{
+.boxt{
     position: absolute;
     grid-column: 1;
     text-align: center;
     height: fit-content;
     min-height: 100px;
     position: relative;
+    margin-top: 5%;
     margin-left: 10%;
     margin-right: 10%;
     border-radius: 3px;
@@ -81,9 +84,52 @@ progress::-webkit-progress-value {
     color: white;
 }
 
+.boxo{
+    display: flex;
+    position: absolute;
+    grid-column: 3;
+    grid-row: 2;
+    height: fit-content;
+    margin-top: 5%;
+    text-align: center;
+    justify-self: center;
+}
+
+.imo{
+    width: 80%;
+    height: auto;
+}
+
 .b2{
     grid-column: 3;
 }
 .b4{
     grid-column: 3;
+}
+
+.text{
+    margin: 4%;
+    text-align: justify;
+}
+@media screen and (max-width: 1000px) {
+    .corps{
+        grid-template-columns: 10% 90%;
+    }
+    .boxo{
+        visibility: hidden;
+    }
+
+    .box{
+        grid-column: 2;
+    }
+
+    .date{
+        grid-column: 1;
+    }
+
+    progress{
+        grid-column: 1;
+    }
+    
+    
 }
