--- a/code site/style/css/csshistoiredeezer.css
+++ b/code site/style/css/csshistoiredeezer.css
@@ -2,6 +2,7 @@
 .corps{
     display: grid;
     grid-template-columns: 45% 10% 45%;
+    height: fit-content;
 }
 
 h2{
@@ -15,18 +16,18 @@ h2{
 	-webkit-appearance: none;
 	appearance: none;
 	position: relative;
+    border-radius: 5px;
     top: 500px;
     left: 50%;
 	transform: translate(-50%) rotate(90deg);
-	width: 950px;
+	width: 1000%;
 	height: 8px;
 }
 
 progress::-webkit-progress-bar {
     grid-column: 2;
 	background-color: gray;
-    border-bottom-right-radius: 5px;
-	border-top-right-radius: 5px;
+    border-radius: 5px;
 }
 
 
@@ -55,6 +56,41 @@ progress::-webkit-progress-value {
     grid-row: 6;
 }
 
+.p6{
+    grid-row: 7;
+}
+.p7{
+    grid-row: 8;
+}
+.p8{
+    grid-row: 9;
+}
+.p9{
+    grid-row: 10;
+}
+.p10{
+    grid-row: 11;
+}
+.p11{
+    grid-row: 12;
+}
+.p12{
+    grid-row: 13;
+}
+.p13{
+    grid-row: 14;
+}
+.p14{
+    grid-row: 15;
+}
+.p15{
+    grid-row: 16;
+}
+.p16{
+    grid-row: 17;
+}
+
+
 .date{
     text-align: center;
     justify-self: center;
@@ -79,23 +115,34 @@ progress::-webkit-progress-value {
     margin-left: 10%;
     margin-right: 10%;
     border-radius: 3px;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 1);
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
     background: rgb(28, 37, 65);
     color: white;
 }
 
 .boxo{
-    display: flex;
-    position: absolute;
-    grid-column: 3;
-    grid-row: 2;
+    position: relative;
     height: fit-content;
     margin-top: 5%;
     text-align: center;
-    justify-self: center;
+}
+
+.b1o{
+    grid-row: 2;
+    grid-column: 3;
+}
+
+.b2o{
+    grid-row: 3;
+    grid-column: 1;
 }
 
 .imo{
+    width: 80%;
+    height: auto;
+}
+
+.imo2{
     width: 80%;
     height: auto;
 }
@@ -104,6 +151,24 @@ progress::-webkit-progress-value {
     grid-column: 3;
 }
 .b4{
+    grid-column: 3;
+}
+.b6{
+    grid-column: 3;
+}
+.b8{
+    grid-column: 3;
+}
+.b10{
+    grid-column: 3;
+}
+.b12{
+    grid-column: 3;
+}
+.b14{
+    grid-column: 3;
+}
+.b16{
     grid-column: 3;
 }
 
