--- a/code site/style/css/pageeco.css
+++ b/code site/style/css/pageeco.css
@@ -17,6 +17,8 @@ h2
 {
   margin-top: 5%;
   margin-bottom: 5%;
+  margin-left: 2%;
+  margin-right: 2%;
   text-align: center;
   font-size: 36px;
 }
@@ -24,6 +26,7 @@ h2
 #txt_graph
 {
   font-size: 36px;
+  text-align: justify;
 }
 
 .par_bourse
@@ -83,4 +86,11 @@ h2
 {
   grid-column: 2;
   grid-row: 2;
+}
+
+.card-text
+{
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
 }
