--- a/style/css/hitsdumoment.css
+++ b/style/css/hitsdumoment.css
@@ -532,6 +532,7 @@ h5{
   line-height: normal;
   margin-left: 25%;
   margin-top: 2%;
+  margin-bottom: 2%;
   min-height: 60px;
   min-width: 0;
   outline: none;
