--- a/style/css/csshistoiredeezer.css
+++ b/style/css/csshistoiredeezer.css
@@ -5,6 +5,11 @@
     height: fit-content;
 }
 
+.boxhead3 a{
+    color: rgb(242, 102, 25);
+    text-decoration: underline;
+}
+
 .temoin{
     grid-row: 1;
     height: 100%;
