--- a/style/css/pageaccueil.css
+++ b/style/css/pageaccueil.css
@@ -11,6 +11,11 @@ h3{
     text-align:center;
 }
 
+.boxhead0 a{
+    color: rgb(242, 102, 25);
+    text-decoration: underline;
+}
+
 h4{
     color:white;
     text-align:center;
