--- a/style/css/servicedeezer.css
+++ b/style/css/servicedeezer.css
@@ -10,6 +10,12 @@
     
 }
 
+
+.boxhead2 a{
+    color: rgb(242, 102, 25);
+    text-decoration: underline;
+}
+
 .titre3{
     margin-top: 20px;
     margin-left: 90px;
